Java 11; implementing of a new plan to make enterprise version of a bot